@@ -10,6 +10,11 @@ in the release notes and/or placed into UPDATING.
 
 All ports committers are allowed to commit to this file.
 
+20130425:
+AUTHOR: bapt@FreeBSD.org
+
+  * USE_FREETYPE is no longer recognized
+
 20130423:
 AUTHOR: jgh@FreeBSD.org
 
